--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -1,4 +1,4 @@
-name: Build LaTeX document
+name: LaTeX
 on: [push]
 jobs:
   build_latex:
@@ -6,12 +6,12 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v1
-      - name: Compile design document
+      - name: Compile - Standards
         uses: dante-ev/latex-action@master
         with:
           root_file: doc/design/standards.tex
-      - name: Archive PDF file
+      - name: Archive PDF - Standards
         uses: actions/upload-artifact@v2
         with:
           name: documents-standards
-          path: doc/design/standards.pdf
+          path: standards.pdf
