FEAT: Move armidillo include files to /opt/local/include

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,8 @@ COMPILE.CPP = g++
 LINK.CPP = g++
 AR = ar -rs
 
-# FLAGS = -O3 -ffast-math -c -I/opt/local/include
-FLAGS = -c -I/opt/local/include
+FLAGS = -O3 -ffast-math -c -I/opt/local/include
+# FLAGS = -c -I/opt/local/include
 
 .SUFFICES:
 .SUFFICES: .cpp .o
