FEAT: Add read_omniweb_file

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,10 +5,10 @@ COMPILE.CPP = g++
 LINK.CPP = g++
 AR = ar -rs
 
-FLAGS = -O3 -ffast-math -c -I/opt/local/include
+# FLAGS = -O3 -ffast-math -c -I/opt/local/include
 
 # Can use this version for no optimization and no fast math:
-# FLAGS = -c -I/opt/local/include
+FLAGS = -c -I/opt/local/include
 
 .SUFFICES:
 .SUFFICES: .cpp .o
@@ -36,6 +36,7 @@ OBJECTS = \
 	report.o\
 	file_input.o\
 	read_f107_file.o\
+	read_omni_file.o\
 	init_geo_grid.o\
 	fill_grid.o\
 	calc_neutral_derived.o\
