--- a/inputs/aether.in
+++ b/inputs/aether.in
@@ -27,7 +27,7 @@ separated values or a row of values (e.g., times can be year, month,
 day, etc, or year\n month\n day\n etc...)
 
 #debug
-1    iVerbose
+2    iVerbose
 
 #planet
 earth
@@ -75,7 +75,8 @@ bfield, 0.0
 UA/inputs/chemistry_earth.csv
 
 #omniweb
-omni_20110622.txt
+UA/inputs/omni_20110319.txt
 
 #electrodynamics
-UA/inputs/test_ed.bin
+UA/inputs/b20110320n_omni.bin
+
