Initial commit of the branch implementing the dipole field grid. This feature is not yet working. Summary of intial changes: 1) add function to input class to return mangetic and geo grid parameters separately. 2) create test_mgrid target for testing the magnetic grid set up. 3) add logical to grid headerto determine if you are a magnetic grid or not. Still need to commit initial verison of init_mag_grid.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 # (c) 2020, the Aether Development Team (see doc/dev_team.md for members)
 # Full license can be found in License.md
 
-include Makefile.OSX
+include Makefile.OS
 
 .SUFFICES:
 .SUFFICES: .cpp .o
@@ -50,7 +50,7 @@ TEST = \
 	test.o
 
 .cpp.o: ${HEADERS}
-	${COMPILE.CPP} ${FLAGS} $<
+	${COMPILE.CPP} ${FLAGS} -l${NETCDF} -l${ARMADILLO} $<
 
 MY_LIB = libAether.a
 
@@ -59,11 +59,21 @@ LIB: ${CLASSES} ${OBJECTS}
 
 
 Aether: ${MAIN} LIB
-	${LINK.CPP} -o aether.exe ${MAIN} ${MY_LIB} -L../lib -L${LIB_DIR} -l${NETCDF}
+	${LINK.CPP} -o aether.exe ${MAIN} ${MY_LIB} -L../lib -L${LIB_DIR} -l${NETCDF} -l${ARMADILLO}
 
 test: ${TEST} LIB
-	${LINK.CPP} -o test.exe ${TEST} ${MY_LIB} -L../lib -L${LIB_DIR} -l${NETCDF}
+	${LINK.CPP} -o test.exe ${TEST} ${MY_LIB} -L../lib -L${LIB_DIR} -l${NETCDF} -l${ARMADILLO}
 
 clean:
 	rm -f *~ core *.o *.exe *.a *.so *.d
+
+
+
+TESTMGRID = \
+	test_mgrid.o
+
+test_mgrid: ${TESTMGRID} LIB
+	${LINK.CPP} -o test_mgrid.exe ${TESTMGRID} ${MY_LIB} -L../lib -L${LIB_DIR} -l${NETCDF} -l${ARMADILLO}
+
+
 
