Initial version of init_mag_grid.cpp and unit test driver program. Note this is an incremental commit and the full code is not working. Currently implemented: a routine for locating the qN an qS values for one field line using a bisection approach, and routine for converting xyz dipole to geo coords. Still to be implemented: filling in q values along field, filling full 3D grid for all lines.

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,6 +30,7 @@ OBJECTS = \
 	file_input.o\
 	fill_grid.o\
 	init_geo_grid.o\
+	init_mag_grid.o\
 	output.o\
 	read_collision_file.o\
 	read_f107_file.o\
