FIX: Use install method to help creation of new targets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,12 +59,13 @@ if(USE_NETCDF)
   target_link_libraries(aether PUBLIC ${NETCDF_LIBRARIES_C})
 endif()
 
-if(MAKE_RUNDIR)
-  file(COPY ${PROJECT_SOURCE_DIR}/inputs/
-       DESTINATION ${RUN_DIR}/
-       PATTERN "*")
-  file(COPY ${PROJECT_SOURCE_DIR}/inputs/UA/
-       DESTINATION ${RUN_DIR}/UA/inputs)
-     file(COPY ${CMAKE_BINARY_DIR}/aether
-          DESTINATION ${RUN_DIR})
-endif()
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/inputs/
+        DESTINATION ${RUN_DIR}
+        PATTERN "UA" EXCLUDE
+        )
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/inputs/UA/
+        DESTINATION ${RUN_DIR}/UA/inputs/
+        )
+install(TARGETS aether RUNTIME
+        DESTINATION ${RUN_DIR}
+        )
