--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,14 @@ jobs:
         sudo apt-get install liblapack-dev libblas-dev libboost-dev libarmadillo-dev
 
     - name: CMake Configure
-    - run: |
+      run: |
         mkdir build
         cd build
         cmake ${{ matrix.cflag }} ..
         make -j
 
     - name: Test run
-    - run: |
+      run: |
         cd ..
         cp -R share/run ./run_test
         cd run_test
