--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         sudo apt install cmake
         sudo apt-get install libnetcdf-dev
         sudo apt install libnetcdf-c++4-dev
-        sudo apt-get install -y nlohmann-json-dev
+        sudo apt-get install -y nlohmann-json3-dev
         sudo apt-get install liblapack-dev libblas-dev libboost-dev libarmadillo-dev
 
     - name: CMake Configure
