BUG: add debug statement
Added the VERBOSE statement to the make command to help identify potential issues.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         mkdir build
         cd build
         cmake ${{ matrix.cflag }} ..
-        make -j
+        make VERBOSE=1
 
     - name: Test run
       run: |
