--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: |
+        sudo apt-get update
         sudo apt install cmake
         sudo apt-get install libnetcdf-dev
         sudo apt install libnetcdf-c++4-dev
