--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Install OSX dependencies
       if: startsWith(matrix.os, 'mac')
       run: |
-        sudo brew update
-        cat requirements.mac | xargs sudo brew install
+        brew update
+        cat requirements.mac | xargs brew install
 
     - name: CMake Configure
       run: |
