--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
       if: startsWith(matrix.os, 'mac')
       run: |
         brew update
+	brew upgrade
         cat requirements.mac | xargs brew install
 
     - name: CMake Configure
