--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,22 @@ jobs:
         brew update
         brew upgrade
         cat requirements.mac | xargs brew install
+	brew reinstall gcc
 
-    - name: CMake Configure
+    - name: Ubuntu cmake configure
+      if: startsWith(matrix.os, 'ubuntu')
       run: |
         mkdir build
         cd build
         cmake ${{ matrix.cflag }} ..
+        make VERBOSE=1
+
+    - name: Mac cmake configure
+      if: startsWith(matrix.os, 'mac')
+      run: |
+        mkdir build
+        cd build
+        cmake ${{ matrix.cflag }} -DCMAKE_CXX_COMPILER=/usr/local/bin/gcc-12 ..
         make VERBOSE=1
 
     - name: Test run
