--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        cc: ["gcc"]
-        cxx: ["g++"]
         cflag: ["-DUSE_NETCDF=Y", "", "-DUSE_DOUBLE_PRECISION=Y"]
+        include:
+          - os: ubuntu-latest
+            cc: "gcc"
+          - os: macos-latest
+            cc: "/usr/local/bin/gcc-13"
 
-    name: ${{ matrix.cxx }} and ${{ matrix.cc }} on ${{ matrix.os }} with flag ${{ matrix.cflag }}
+    name: ${{ matrix.cc }} on ${{ matrix.os }} with flag ${{ matrix.cflag }}
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -46,7 +48,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ${{ matrix.cflag }} -DCMAKE_CXX_COMPILER=/usr/local/bin/gcc ..
+        cmake ${{ matrix.cflag }} -DCMAKE_CXX_COMPILER=${{ matrix.cc }} ..
         make VERBOSE=1
 
     - name: Test run
