--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
         cd build
         cmake ${{ matrix.cflag }} ..
         make VERBOSE=1
+	which ${{ matrix.cc }}
 
     - name: Mac cmake configure
       if: startsWith(matrix.os, 'mac')
