--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Mac cmake configure
       if: startsWith(matrix.os, 'mac')
       run: |
-        ls /usr/local/Cellar/lib/*netcdf*
+        find /* -name "libnetcdf*"
         mkdir build
         cd build
         cmake ${{ matrix.cflag }} -DCMAKE_CXX_COMPILER=${{ matrix.cc }} ..
