--- a/share/run/UA/inputs/earth.in
+++ b/share/run/UA/inputs/earth.in
@@ -57,12 +57,12 @@ O+ is O+(4S) is the base state of O+, but is just called O+
 O+ has excited states of O+(2D) and O+(2P).
 
 #IONS
-name, mass, charge, advect
-O+, 16, 1, 1
-O2+, 32, 1, 0
-N2+, 28, 1, 0
-NO+, 30, 1, 0
-N+, 14, 1, 0
-He+, 4, 1, 1
-O+_2D, 16, 1, 0
-O+_2P, 16, 1, 0
+name, mass, charge, vibration, advect
+O+, 16, 1, 5, 1
+O2+, 32, 1, 7, 0
+N2+, 28, 1, 7, 0
+NO+, 30, 1, 7, 0
+N+, 14, 1, 5, 0
+He+, 4, 1, 5, 1
+O+_2D, 16, 1, 5, 0
+O+_2P, 16, 1, 5, 0
